[fix] json 파일 수정

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+      { 
+        "source": "/(.*)",
+        "destination": "http://15.165.247.2/"
+      }
     ]
   }
   
