--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "rewrites": [
-      { 
-        "source": "/(.*)",
-        "destination": "http://15.165.247.2/"
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/api/:path*",  // 프론트엔드에서 사용할 경로
+      "destination": "http://15.165.247.2/api/:path*" // 실제 HTTP 백엔드 경로
+    }
+  ]
+}
